[Jayakumar/Vidhya] #104 Fix alignment issue in two column image block when placed above full width image block

--- a/article/static/article/css/blocks.less
+++ b/article/static/article/css/blocks.less
@@ -29,6 +29,7 @@
 }
 
 .full-width-image-block {
+  margin: 10px;
   img {
     width: 100%;
   }
